--- a/Catalog/FreeCourse.Services.Catalog/FreeCourse.Services.Catalog.csproj
+++ b/Catalog/FreeCourse.Services.Catalog/FreeCourse.Services.Catalog.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\..\Shared\FreeCourse.Shared\FreeCourse.Shared.csproj" />
   </ItemGroup>
 
 </Project>
