--- a/IdentityServer/FreeCourse.IdentityServer/appsettings.json
+++ b/IdentityServer/FreeCourse.IdentityServer/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=AspIdUsers.db;"
+    "DefaultConnection": "User ID=postgres;Password=123456;Host=localhost;Port=5432;Database=IdentityServer;"
   }
 }
