--- a/Catalog/FreeCourse.Services.Catalog/appsettings.json
+++ b/Catalog/FreeCourse.Services.Catalog/appsettings.json
@@ -1,10 +1,11 @@
 {
   "DatabaseSettings": {
     "CourseCollectionName": "Courses",
-    "CategoryCollectionName": "Categories",
+    "CategoriesCollectionName": "Categories",
     "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName" :  "CatalogDb"
+    "DatabaseName": "CatalogDb"
   },
+  "IdentityServerURL" : "http://localhost:505",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
